--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div class="section">
         <h1>Matelich</h1>
         <p>My projects!</p>
+<ul><li><a href="album-radio">Album Radio</a> is an <a href="http://rdio.com">Rdio</a> powered <strong>full album radio.</strong></li></ul>
         </div>
 <!--    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script src="js/flipclock/libs/base.js"></script>
