add link to cool times

--- a/index.html
+++ b/index.html
@@ -47,13 +47,7 @@
         <h1>Matelich</h1>
         <p>My projects!</p>
 <ul><li><a href="album-radio">Album Radio</a> is an <a href="http://rdio.com">Rdio</a> powered <strong>full album radio.</strong></li></ul>
+<ul><li><a href="album-radio">Cool Times</a> lets you know whether the current time of day is cool or not. Project with my daughter.</strong></li></ul>
         </div>
-<!--    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script src="js/flipclock/libs/base.js"></script>
-    <script src="js/flipclock/flipclock.js"></script>
-    <script src="js/flipclock/faces/counter.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.6.0/underscore-min.js"></script>
-    <script src="js/rdio-utils.js"></script>
-    <script src="js/albumradio.js"></script>-->
 </body>
 </html>
