--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>Matelich</h1>
         <p>My projects!</p>
 <ul><li><a href="album-radio">Album Radio</a> is an <a href="http://rdio.com">Rdio</a> powered <strong>full album radio.</strong></li></ul>
-<ul><li><a href="album-radio">Cool Times</a> lets you know whether the current time of day is cool or not. Project with my daughter.</strong></li></ul>
+<ul><li><a href="cool-times">Cool Times</a> lets you know whether the current time of day is cool or not. Project with my daughter.</strong></li></ul>
         </div>
 </body>
 </html>
